css tweaks for max display sizes (not perfect -thumb stretching); fixed bugs in arrow-jump code

--- a/2014/glitchweb/css/gallery.css
+++ b/2014/glitchweb/css/gallery.css
@@ -19,7 +19,8 @@
 #gallery-previous-link {left:0; padding:6px 10px 6px 6px; border-radius:0 6px 6px 0; -moz-border-radius-bottomright:6px; -webkit-border-bottom-right-radius:6px; -moz-border-radius-topright:6px; -webkit-border-top-right-radius:6px;}
 #gallery-next-link {padding:6px 6px 6px 10px; right:0; border-radius:6px 0 0 6px; -moz-border-radius-bottomleft:6px; -webkit-border-bottom-left-radius:6px; -moz-border-radius-topleft:6px; -webkit-border-top-left-radius:6px;}
 #gallery-meta-container {background:#fff; color:#999; display:none; margin:0 auto; overflow:auto;}
-#gallery-image {padding:8px;}
+/* test values.... */
+#gallery-image {padding:8px; max-height: 500px; max-width: 500px;}
 #gallery-meta {display:none; height:44px; padding:0px 8px;}
 #gallery-meta div {float:left;}
 #gallery-info {text-align:left; width:80%;}
